--- a/src/preview/assets/css/main.scss
+++ b/src/preview/assets/css/main.scss
@@ -154,6 +154,10 @@ $sg_defaultTransition: $sg_defaultTransitionProperty $sg_defaultTransitionDurati
     @include visuallyhidden;
   }
 
+  .tab_content_wrapper {
+    background-color: #fff;
+  }
+
   .tab_content {
     display: none;
   }
